--- a/web/src/styles/custom-properties.css
+++ b/web/src/styles/custom-properties.css
@@ -1,5 +1,6 @@
 :root {
-  --font-family-sans: -apple-system, BlinkMacSystemFont, sans-serif;
+  --font-family-sans: karla, -apple-system, BlinkMacSystemFont, sans-serif;
+  --font-family-secondary: karla , -apple-system, BlinkMacSystemFont, sans-serif;
 
   --color-black: #202123;
   --color-dark-gray: #32373e;
